# convex_hull

./: CMakeLists.txt  README.md  main.cc
common/: point.h
convex_hull/: convex_hull.cc  convex_hull.h
line_segments_intersect/: line_segments_intersect.cc  line_segments_intersect.h
